# onshape2xacro

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  unit-tests.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: cleanup-plan.md  fix-part-matching.md  step-exporter-analysis.md
.sisyphus/plans/: bugfix-occurrence-lookup.md  cli-defaults-ux.md  coacd-tuning-config.md  collision-mesh-coacd.md  deep-clean.md  export-config-system.md  fix-mesh-and-axis.md  fix-part-matching.md  inertia-parallel-axis-fix.md  optional-collision-decomposition.md  visual-mesh-format.md
docs/plans/: 2026-01-28-condensed-robot-step-mesh.md  2026-01-28-fetch-cad-command-design.md  2026-01-28-step-download-parse-errors.md  2026-01-29-bom-based-inertia.md  2026-01-29-inertia-implementation.md  2026-01-30-inertia-debug-table.md
examples/: load_pickle.py
openarm_left/: assembly.step  cad.pickle
openarm_left_xacro/: inertia_debug.md
openarm_left_xacro/config/: inertials.yaml  joint_limits.yaml
openarm_left_xacro/meshes/: base_asm_1_j1_a_1.glb  base_asm_1_j1_a_1_collision.stl  j8_a_1.glb  j8_a_1_collision.stl  l1_asm_2_j1_c_1.glb  l1_asm_2_j1_c_1_collision.stl  l2_asm_2_j2_a_1.glb  l2_asm_2_j2_a_1_collision.stl  l3_asm_2_boss_extrude31_1.glb  l3_asm_2_boss_extrude31_1_collision.stl  l4_asm_2_j4_c_1.glb  l4_asm_2_j4_c_1_collision.stl  l5_right_asm_1_j5_a_1.glb  l5_right_asm_1_j5_a_1_collision.stl  l6_urdf_2_j7_ab_1.glb  l6_urdf_2_j7_ab_1_collision.stl
openarm_left_xacro/urdf/: _.urdf.xacro  _.xacro
openspec/: project.md
scripts/: analyze_transforms.py  verify_mesh_transforms.py
src/onshape2xacro/: __init__.py  auth.py  cad_utils.py  condensed_robot.py  fix_xacro.py  mate_values.py  models.py  module_boundary.py  naming.py  optimized_cad.py  pipeline.py  schema.py  simulate_robot.py  ui.py  validate.py  visualize_export.py  xacro_to_urdf.py
teaarm_xacro/: inertia_debug.md
teaarm_xacro/config/: inertials.yaml  joint_limits.yaml
teaarm_xacro/urdf/: teaarm.urdf.xacro  teaarm.xacro
tests/: AGENTS.md  conftest.py  test_auth.py  test_cad_utils.py  test_cli_coverage.py  test_coacd_coverage.py  test_config_coverage.py  test_coverage_gaps.py  test_integration.py  test_link_name_overrides.py  test_mate_values.py  test_module_boundary.py  test_naming.py  test_optimized_cad.py  test_pipeline.py  test_pipeline_coverage.py  test_ui.py  test_validate.py  test_visualize_export.py  test_visualize_export_extended.py
tests/fixtures/: test_bom.csv  test_cube.step
tests/test_cli/: test_cli_ui.py  test_config.py  test_export_config_cli.py  test_fetch_cad.py  test_format_option.py  test_visualize.py
tests/test_config/: test_export_config.py  test_override.py
tests/test_inertia/: AGENTS.md  test_bom.py  test_calculator.py  test_calculator_with_bom.py  test_debug_table.py  test_report.py  test_types.py  test_writer.py
tests/test_integration/: test_config_workflow.py  test_modular_export.py
tests/test_kinematics/: test_condensed_robot.py  (+3 more)
(+193 files in other folders)
