[project]
name = "onshape2xacro"
dynamic = ["version"]
description = "An exporter for converting Onshape assemblies into high-quality Xacro/URDF robot descriptions."
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "onshape-robotics-toolkit",
    "tyro",
    "lxml",
    "pyyaml",
    "xacro>=2.1.1",
    "keyring",
    "cadquery-ocp>=7.7.0",
    "trimesh>=4.11.1",
    "scipy>=1.17.0",
    "pymeshlab>=2025.7",
    "cadquery>=2.6.1",
    "pycollada>=0.8",
]

[project.scripts]
onshape2xacro = "onshape2xacro.cli:main"
validate-xacro = "onshape2xacro.validate:main"
visualize-export = "onshape2xacro.visualize_export:main"
simulate-robot = "onshape2xacro.simulate_robot:main"
fix-xacro = "onshape2xacro.fix_xacro:main"
xacro-to-urdf = "onshape2xacro.xacro_to_urdf:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest",
    "pytest-cov>=7.0.0",
]
visualize = [
    "matplotlib",
]
simulate = [
    "pybullet",
    "numpy",
]
